[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/iTitus/aoc2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
indexmap = "2.7"
itertools = "0.13"
lazy_static = "1.5"
nalgebra = "0.33"
num = "0.4"
once_cell = "1.20"
pathfinding = "4.11"
regex = "1"
rustc-hash = "2.1"
thiserror = "2.0"
tinyvec = "1.8"

[dev-dependencies]
pretty_assertions = "1.4"
